--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -28,5 +28,6 @@ jobs:
         printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
         gem build *.gemspec
         gem push *.gem
+        rm $HOME/.gem/credentials
       env:
         GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
