--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -26,6 +26,7 @@ jobs:
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
         printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+        chmod +x ./bin/vstheme2scss
         gem build *.gemspec
         gem push *.gem
         rm $HOME/.gem/credentials
